# SAP_API

./: .gitignore  ActionTypes.py  Cargo.toml  GameState.py  HandleConfig.py  Notes.txt  README.md  RandyBot.py  RunClient.py  RunServer.py  SAP_API.py  UserBot.py  __main__.py  pyproject.toml  rand.py  requirements.txt  setup.py
API/: SAP_API.py
Common/: GameState.py  Results.py
Example/: RandyBot.py
Examples/: RandyBot.py  UserBot.py
SAP_API/: __init__.py  __main__.py
SAP_API/API/: API_Options.py  API_State.py  API_Task.py  ActionCompletionType.py  Actions.py  Client.py  Constants.py  Options.py  SAP.py  SAP_API.py  StateTypes.py
SAP_API/API/Client/: Client.py
SAP_API/API/Server/: Server.py
SAP_API/Assets/: __init__.py
SAP_API/Common/: GameSettings.py  GameState.py  UserLogin.py
SAP_API/Common/ClientServer/: Communication.py  Constants.py  Messages.py  Serialization.py
SAP_API/Examples/: RandyBot.py  UserBot.py
