[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SAP_API"
version = "1.5.0"
description = "API for the game Super Auto Pets"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "YS-RAPTOR"}]
urls = {homepage = "https://github.com/YS-RAPTOR/SAP_API"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.1",
    "opencv-python>=4.7.0.68",
    "Pillow>=9.3.0",
    "pytesseract>=0.3.10",
    "selenium>=4.7.2",
    "webdriver-manager>=3.8.5"
]

[tool.setuptools.packages.find]
exclude = ["SAP_API.Assets.*",".gitignore"]

[tool.setuptools.package-data]
"SAP_API.Assets" = ['*.png', 'EmptySlots/*.png', 'NotAvailableSlots/*.png']

[tool.setuptools.exclude-package-data]
"*" = [".gitignore"]